--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet">
 
   <!-- CSS -->
-  <link rel="stylesheet" href="">  
+  <link rel="stylesheet" href="css/style.css">  
   
   <title>Frontend Mentor | Stats preview card component</title>
 </head>
