--- a/index.html
+++ b/index.html
@@ -1,36 +1,55 @@
 <!DOCTYPE html>
 <html lang="en-US">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Fav Icon -->
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <!-- Font Family - Inter -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-  <!-- Font Family - Lexend Deca -->
-  <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet">
+        <!-- Fav Icon -->
+        <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+        <!-- Font Family - Inter -->
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+        <!-- Font Family - Lexend Deca -->
+        <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet">
 
-  <!-- CSS -->
-  <link rel="stylesheet" href="css/style.css">  
-  
-  <title>Frontend Mentor | Stats preview card component</title>
-</head>
+        <!-- CSS -->
+        <link rel="stylesheet" href="css/style.css">  
+        
+        <title>Frontend Mentor | Stats preview card component</title>
+    </head>
 
-<body>
+    <body>
+        <main class="card">
+            <div class="img-container">
+                <img src="images/image-header-mobile.jpg" alt="image header mobile">
+            </div>
 
-  Get insights that help your business grow.
+            <div class="content-container">
+                <h1>Get <span class="violet">insights</span> that help your business grow.</h1>
+                <p>
+                    Discover the benefits of data analytics and make better decisions regarding revenue, customer 
+                    experience, and overall efficiency.
+                </p>
 
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-  experience, and overall efficiency.
+                <div class="stats-container">
+                    <div class="stats-item">
+                        <span class="numbers">10k+</span>
+                        <span class="name">COMPANIES</span>
+                    </div>
+                    <div class="stats-item">
+                        <span class="numbers">314</span>
+                        <span class="name">TEMPLATES</span>
+                    </div>
+                    <div class="stats-item">
+                        <span class="numbers">12M+</span>
+                        <span class="name">QUERIES</span>
+                    </div>
+                </div>
+            </div>
+        </main>    
 
-  10k+ companies
-  314 templates
-  12m+ queries
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Jean Wisotscki</a>.
-  </div>
-</body>
+        <div class="attribution">
+            Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+            Coded by <a href="#">Jean Wisotscki</a>.
+        </div>
+    </body>
 </html>
