--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <body>
         <main class="card">
             <div class="img-container">
-                <img src="images/image-header-mobile.jpg" alt="image header mobile">
+                <div class="img"></div>
             </div>
 
             <div class="content-container">
